@@ -220,7 +220,7 @@ class MenuNodeAPIHookTestCase extends MenuNodeAPITestCase {
     $this->assertTrue(isset($node->menu_node_links), t('menu_node_node_load() fired correctly'));
 
     // Check that hook_menu_node_insert() ran three times.
-    $this->assertTrue(menu_node_test_get() == 3, t('hook_menu_node_insert() fired properly.'));
+    $this->assertTrue(menu_node_test_get() == 'insert2', t('hook_menu_node_insert() fired properly.'));
 
     // Check that the insert hook does not run on non-node menu items.
     menu_node_test_set('no-insert');
@@ -231,7 +231,7 @@ class MenuNodeAPIHookTestCase extends MenuNodeAPITestCase {
     $count = db_query("SELECT COUNT(*) FROM {menu_node}")->fetchField();
     $this->assertTrue($count == 3, t('Found the correct row count in {menu_node}.'));
 
-    // Check that the delete hook runs on node delete.
+    // Check that the delete hook runs once on node delete.
     $this->menuNodeAPIDeleteNode(TRUE);
     $this->assertTrue(menu_node_test_get() == 'delete', t('hook_menu_node_delete() fired properly on node deletion.'));
 
@@ -239,7 +239,7 @@ class MenuNodeAPIHookTestCase extends MenuNodeAPITestCase {
     $count = db_query("SELECT COUNT(*) FROM {menu_node}")->fetchField();
     $this->assertTrue($count == 2, t('Found the correct row count in {menu_node}.'));
 
-    // Check that the delete hook runs on node link delete.
+    // Check that the delete hook runs once on node link delete.
     menu_node_test_set('no-insert');
     $this->menuNodeAPIDeleteLink(TRUE);
     $this->assertTrue(menu_node_test_get() == 'delete', t('hook_menu_node_delete() fired properly on node link deletion.'));
@@ -278,11 +278,45 @@ class MenuNodeAPIHookTestCase extends MenuNodeAPITestCase {
     $node->menu['description'] = '';
     $node->menu['link_title'] = $node->title;
     node_save($node);
+    // Check that the update ran once.
     $this->assertTrue(menu_node_test_get() == 'update', t('hook_menu_node_update() fired properly on node save with menu link.'));
 
     // Simulate a node save, removing the menu item.
     $node->menu['enabled'] = FALSE;
     node_save($node);
-    $this->assertTrue(menu_node_test_get() == 'delete', t('hook_menu_node_delete() fired properly on node save with menu link removed.'));
+    // Check that the delete hook ran once.
+    $this->assertTrue(menu_node_test_get() == 'delete1', t('hook_menu_node_delete() fired properly on node save with menu link removed.'));
+
+    // Add two menu items to the same node.
+    $node->menu['enabled'] = TRUE;
+    $node->menu['mlid'] = $menu->mlid;
+    $node->menu['link_path'] = $menu->link_path;
+    $node->menu['description'] = '';
+    $node->menu['link_title'] = $node->title;
+    node_save($node);
+    $item = array(
+      'menu_name' => 'management',
+      'link_path' => "node/$node->nid",
+      'link_title' => $node->title,
+      'description' => '',
+      'enabled' => 1,
+      'expanded' => 0,
+      'parent' =>  'management' . ':' . 0,
+      'weight' => '0',
+    );
+    menu_link_save($item);
+
+    // Verify that we have two items.
+    $node = node_load($node->nid, NULL, TRUE);
+    $this->assertTrue(count($node->menu_node_links) == 2, t('Saved a node with two separate menu links.'));
+
+    // Update the node and check that the hook runs twice.
+    node_save($node);
+    $this->assertTrue(menu_node_test_get() == 'update2', t('hook_menu_node_update() fired properly on node save with multiple menu links.'));
+
+    // Delete the node and check that the hook runs twice.
+    node_delete($node->nid);
+    $this->assertTrue(menu_node_test_get() == 'delete3', t('hook_menu_node_delete() fired properly on node delete with multiple menu links.'));
+
   }
 }
